<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a3"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/customboder"
        android:layoutMode="opticalBounds"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:id="@+id/txtUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/url"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edturl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.58"
                android:background="@drawable/border_edittext"
                android:ems="10"
                android:singleLine="true"
                android:hint="@string/example.com" >
	
                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btncheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                
                android:text="@string/Check" />
        </LinearLayout>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/customboder"
        android:layoutMode="opticalBounds"
        android:overScrollMode="always"
        android:stretchColumns="1" >

        <LinearLayout
            android:id="@+id/LinearLa"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/labelurl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/urlexam"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#007bff"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Lineaut2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/test"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/Trustworthiness"
                android:textColor="#007BFF"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/Lineayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <ImageView
                    android:id="@+id/imagetrust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/r1"
                    android:contentDescription="@string/Excellent"
                    />

                <TextView
                    android:id="@+id/label_trust_repu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:onClick=""
                    android:text="Rating scale"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linet2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="10dp"
            android:background="@drawable/test"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/Child_safety"
                 android:textColor="#007BFF"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp" >

                <ImageView
                    android:id="@+id/image_child"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:contentDescription="@string/Excellent"
                    android:src="@drawable/r1" />

                <TextView
                    android:id="@+id/label_child"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:text="Rating scale"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearforcategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/test"
            android:orientation="vertical" >
        </LinearLayout>

    </TableLayout>

</LinearLayout>